<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.account.RecoveryPassword"
    android:background="@drawable/background">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@null"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:contentDescription="@string/todo"
            tools:ignore="PrivateResource" />

        <RelativeLayout
            android:layout_below="@id/back"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/info"
                    android:text="@string/txtCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cpfLayout"
                    android:layout_below="@id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:textColorHint="@color/textColor"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:focusableInTouchMode="true"
                    app:errorEnabled="true"
                    >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id = "@+id/cpf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_thin"
                            android:inputType="number"
                            android:textColor="@color/textColor"
                            />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/send"
                    android:layout_below = "@+id/cpfLayout"
                    android:text="@string/btnSend"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_launcher_button"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/notify"
                    android:alpha="0"
                    android:text="@string/txtSent"
                    android:layout_below="@+id/send"
                    android:layout_width="250dp"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"/>

        </RelativeLayout>

</RelativeLayout>