<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.account.AccountManagement">


    <LinearLayout
        android:id="@id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        tools:ignore="MissingConstraints,ScrollViewCount"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            tools:ignore="MissingConstraints"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailLayout"
            android:hint="@string/tilMail"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/textColor"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/roboto_thin"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id = "@+id/passLayout"
            android:hint = "@string/tilPass"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            app:startIconDrawable="@drawable/ic_pass"
            app:startIconTint="@color/textColor"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/textColor"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:inputType="textPassword"
                android:textColor="@color/textColor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:text="@string/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher_button"
            android:textColor="@color/textColor"
            android:fontFamily="@font/roboto_thin"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/forgotten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/abhaya_libre_semibold"
            android:onClick="Recover"
            android:text="@string/txtForgot"
            android:textColor="@color/textColor"
            android:textSize="15sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            tools:ignore="MissingConstraints,ScrollViewCount"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre_semibold"
                android:onClick="Create"
                android:text="@string/txtNewAcc"
                android:textColor="@color/textColor"
                android:textSize="15sp" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
