<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.account.RecoveryPassword"
    android:background="@drawable/background">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:background="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
            tools:ignore="MissingConstraints,PrivateResource"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider"
            tools:ignore="MissingConstraints,ScrollViewCount"
            android:gravity="center_horizontal|top"
            android:orientation="vertical"
            android:layout_marginLeft="@android:dimen/notification_large_icon_height"
            android:layout_marginRight="@android:dimen/notification_large_icon_width"
            android:layout_marginStart="@android:dimen/notification_large_icon_height"
            android:layout_marginEnd="@android:dimen/notification_large_icon_width">

                <TextView
                    android:id="@+id/info"
                    android:layout_marginTop="@android:dimen/app_icon_size"
                    android:text="@string/txtCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_on_primary"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_thin"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cpfLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilCpf"
                    android:textColorHint="@color/design_default_color_on_primary"
                    android:focusableInTouchMode="true"
                    app:errorEnabled="true"
                    >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id = "@+id/cpf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_thin"
                            android:inputType="number"
                            android:textColor="@color/design_default_color_on_primary"
                            />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/send"
                    android:text="@string/btnSend"
                    android:layout_width="@android:dimen/thumbnail_height"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_launcher_button"
                    android:textColor="@color/design_default_color_on_primary"
                    android:fontFamily="@font/roboto_thin"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/notify"
                    android:text="@string/txtSent"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_on_primary"
                    android:fontFamily="@font/roboto_thin"
                    android:textSize="20sp"
                    android:alpha="0"
                    android:gravity="center_horizontal" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>